terraform/istio/dr-ingress-to-workload.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ingress-to-workload-dr
  namespace: default
spec:
  host: "*.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
